* Added "Sidebar Widgets" styling section to Theme Options for all theme bases.
* Added theme support for `title-tag` in WP 4.1+
* Added a little design flare to alert component, to look less Bootstrap-ish.
* Added "tb_square_medium" crop size, 500x500.
* Added filter for custom logo image in sticky menu, [See Tutorial](http://dev.themeblvd.com/tutorial/adding-a-custom-logo-to-the-sticky-menu/).
* Expanded widget area assignments, requires 1.2.4 update to [Theme Blvd Widget Areas plugin](https://wordpress.org/plugins/theme-blvd-widget-areas/).
* Darkened body text in WordPress page editor.
* CSS tweaks to buttons.
* Improved appearance of text logo option with "Entrepeneur" theme base.
* Fixed: Image cropping with tb_x_large, tb_large, and tb_medium sizes.
* Fixed: Post Showcase (no masonry) not displaying right with excerpts.
* Fixed: Breadcrumbs, when bbPress is installed, was taking over breadcrumbs all over the website.
* Fixed: Added missing breadcrumbs for bbPress user profiles.
* Fixed: Custom padding not applying to "popout" elements in Builder.
* Fixed: Widgets set as "panel" from theme options not displaying right with no widget title.
* Fixed: Issues with nag regarding Theme Options not matching Theme Base on initial theme install, with default Developer base selected.
* Fixed: Blog display option not displaying "full content" when selected, instead of excerpts.
* Fixed: Slider option type not allowing you to inert images less than 200px wide. This was most evident when trying to use the Partner Logos element in the Builder and using small logo images.
* Fixed: When a layout section has repeating background set to parallax, it would get stretched on mobile.
* Fixed: Technorati image icon in social icons.
* Fixed: "Preview Changes" not working correctly when inserting current page's content into custom layout.
* Fixed: "Save as Draft" not working for custom layout pages.
* Fixed: Issues with "Blank Page" page template.